test-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mongo-express
  namespace: 
  annotations:
    kubernetes.io/ingress.class: nginx
  spec:
  rules:
    - host: 185-3-93-206.ip.linodeusercontent.com
      http:
        paths:
          - path: /
            backend:
              serviceName: mongo-express-service
              servicePort: 8081
